# crypt-roller

./: .gitignore  Cargo.toml  README.md  history.json  mempool.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  rust-build-and-checks.yml
circuits/: Makefile  crypt_roller.zok
src/: cli.rs  lib.rs  main.rs  node.rs  prover.rs  sequencer.rs  transaction.rs  wallet.rs
src/node/: history.rs  mempool.rs  state.rs
src/node/history/: tests.rs
src/node/mempool/: tests.rs
src/prover/: errors.rs  merge.rs  partial_tree.rs  poseidon_hasher.rs  sparse_merkle_tree.rs
src/types/: types.rs
src/utils/: storage.rs
src/wallet/: tests.rs
tests/: node.rs
tests/fixtures/: history.json  mempool.json
tests/test_utils/: mod.rs
