[package]
name = "crypt-roller"
version = "0.1.0"
edition = "2021"
description = "An experimental ZK-rollup using ZoKrates circuits."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
clap = { version = "^4.3.12", features = ["derive"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
