[package]
name = "crypt-roller"
version = "0.1.0"
edition = "2021"
description = "An experimental ZK-rollup using ZoKrates circuits."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
clap = { version = "^4.3.12", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
poseidon-rs = "0.0.8"
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
ethers-core = "2.0.8"


